[gd_scene load_steps=5 format=2]

[ext_resource path="res://Main/Main.gd" type="Script" id=1]
[ext_resource path="res://Main/Camera2D.gd" type="Script" id=2]
[ext_resource path="res://Assets/Fonts/SourceHanSansCN-Light.otf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=1]
size = 40
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 3 )

[node name="Main" type="Node2D"]
script = ExtResource( 1 )

[node name="LoadData" type="CanvasLayer" parent="."]
layer = 2

[node name="Label" type="Label" parent="LoadData"]
anchor_left = 0.001
anchor_top = 0.58
anchor_right = 1.0
anchor_bottom = 0.914
margin_left = 0.0799999
margin_top = 150.6
margin_right = 2.0
margin_bottom = -0.119995
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
align = 1
valign = 2
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="ProgressBar" type="ProgressBar" parent="LoadData"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -71.0
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="Camera2D" type="Camera2D" parent="."]
smoothing_enabled = true
script = ExtResource( 2 )

[node name="Nodes" type="Node" parent="."]

[node name="EmptyNodes" type="Node" parent="Nodes"]

[node name="EntropyNodes" type="Node" parent="Nodes"]

[node name="OrderNodes" type="Node" parent="Nodes"]

[node name="Keys" type="Node" parent="."]
